<resources>
    <string name="app_name">MyFirstAndroidApp</string>
    <string name="action_settings">Settings</string>

    <string name="textview1">TextView 1</string>
    <string name="textview2">TextView 2</string>
    <string name="textview3">TextView 3</string>
    <string name="textview4">TextView 4</string>
    <string name="EditText">Edit Text</string>
    <string name="TextButton1">Text Button 1</string>
    <string name="TextButton2">Text Button 2</string>
    <string name="TextButton3">Text Button 3</string>
    <string name="TextButton4">Text Button 4</string>
</resources>
