<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sunkitty.myfirstandroidapp.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/einhorn"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:weightSum="100">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview2" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3" />

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal">

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_Height"
            android:hint="@string/EditText"
            android:textAlignment="viewStart"
            android:gravity="start"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tb_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextButton1"
                />

            <TextView
                android:id="@+id/tb_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextButton2"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tb_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextButton3"
                />

            <TextView
                android:id="@+id/tb_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextButton4"
                />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>
